Separate rendering backend and sandbox application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-project ("Morpho")
+project("Morpho")
 
 # Include sub-projects.
-add_subdirectory ("Morpho")
+add_subdirectory("Morpho")
+add_subdirectory("Sandbox")
