[Morpho] Rework RenderPass and Framebuffer API

--- a/Morpho/CMakeLists.txt
+++ b/Morpho/CMakeLists.txt
@@ -1,10 +1,10 @@
 ﻿# CMakeList.txt : CMake project for Morpho, include source and define
 # project specific logic here.
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.12)
 
 
-set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
@@ -17,8 +17,8 @@ endif()
 set(SOURCE_FILES
     vulkan/command_buffer.hpp vulkan/command_buffer.cpp
     vulkan/context.hpp vulkan/context.cpp
-    vulkan/render_pass_info.hpp vulkan/render_pass_info.cpp
     vulkan/render_pass.hpp vulkan/render_pass.cpp
+    vulkan/render_pass_layout.hpp vulkan/render_pass_layout.cpp
     vulkan/framebuffer.hpp vulkan/framebuffer.cpp
     vulkan/shader.hpp vulkan/shader.cpp
     vulkan/pipeline_state.hpp vulkan/pipeline_state.cpp
@@ -38,7 +38,6 @@ set(SOURCE_FILES
 
 # Add source to this project's executable.
 add_library (Morpho STATIC ${SOURCE_FILES})
-
 
 target_link_libraries(Morpho ${CONAN_LIBS} Vulkan::Vulkan)
 target_include_directories(Morpho PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
