[Renderer] Move all resources into resources.(h|c)pp

--- a/Morpho/CMakeLists.txt
+++ b/Morpho/CMakeLists.txt
@@ -15,28 +15,15 @@ endif()
 set(SOURCE_FILES
     vulkan/command_buffer.hpp vulkan/command_buffer.cpp
     vulkan/context.hpp vulkan/context.cpp
-    vulkan/render_pass.hpp vulkan/render_pass.cpp
-    vulkan/render_pass_layout.hpp vulkan/render_pass_layout.cpp
-    vulkan/framebuffer.hpp vulkan/framebuffer.cpp
-    vulkan/shader.hpp vulkan/shader.cpp
     vulkan/pipeline_state.hpp vulkan/pipeline_state.cpp
-    vulkan/pipeline.hpp vulkan/pipeline.cpp
     vulkan/vma.hpp vulkan/vma.cpp
-    vulkan/buffer.hpp vulkan/buffer.cpp
     vulkan/resource_binding.hpp vulkan/resource_binding.cpp
     vulkan/resource_set.hpp vulkan/resource_set.cpp
-    vulkan/pipeline_layout.hpp vulkan/pipeline_layout.cpp
-    vulkan/descriptor_set.hpp vulkan/descriptor_set.cpp
-    vulkan/descriptor_set_layout.hpp vulkan/descriptor_set_layout.cpp
     vulkan/limits.hpp vulkan/limits.cpp
-    vulkan/image.hpp vulkan/image.cpp
-    vulkan/image_view.hpp vulkan/image_view.cpp
-    vulkan/sampler.hpp vulkan/sampler.cpp
     common/resource_cache.hpp
     common/hash_utils.hpp
-    common/slot_map.hpp
     vulkan/descriptor_pool.hpp vulkan/descriptor_pool.cpp
-    vulkan/vertex_format.hpp vulkan/vertex_format.cpp
+    vulkan/resources.hpp vulkan/resources.cpp 
 )
 
 # Add source to this project's executable.
