[Build] Remove conan usage

--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -17,10 +17,10 @@ set(SOURCE_FILES
     src/math.hpp src/math.cpp
 )
 
-find_package(stb CONFIG REQUIRED)
-find_package(glm CONFIG REQUIRED)
+#find_package(stb CONFIG REQUIRED)
+find_package(glm REQUIRED)
 find_package(glfw3 REQUIRED)
-find_package(tinygltf CONFIG REQUIRED)
+find_package(tinygltf REQUIRED)
 
 foreach (_variableName ${_variableNames})
     message(STATUS "${_variableName}=${${_variableName}}")
@@ -29,5 +29,5 @@ endforeach()
 # Add source to this project's executable.
 add_executable (Sandbox ${SOURCE_FILES})
 
-target_link_libraries(Sandbox glfw TinyGLTF::TinyGLTF stb::stb glm::glm Morpho)
+target_link_libraries(Sandbox glfw tinygltf stb glm::glm Morpho)
 set_property(TARGET Sandbox PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
