Update packages; Move to C++20

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 cmake_minimum_required (VERSION 3.15)
 project("Morpho")
-
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 # Include sub-projects.
 add_subdirectory("Morpho")
 add_subdirectory("Sandbox")
